# PVLI

./: .gitignore  README.md
PVLI/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
PVLI/client/: Application.cpp  Application.h  Application_GUI.cpp  Benchmark.cpp  Benchmark.h  BlockPixelRelocator.cpp  BlockPixelRelocator.h  CMakeLists.txt  DepthPeeling.cpp  DepthPeeling.h  Inpainter.cpp  Inpainter.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Scene.inl  SceneData.h  SceneData.inl  SceneTexture.cpp  SceneTexture.h  SceneView.cpp  SceneView.h  ServerConnection.cpp  ServerConnection.h  TextureManager.cpp  TextureManager.h  ffmpegDecoder.cpp  ffmpegDecoder.h  main.cpp
PVLI/cmake_modules/: FindFreeImage.cmake  FindNVCodec.cmake  FindNVJPEG.cmake  FindTurboJPEG.cmake
PVLI/common/: AsyncWriter.cpp  AsyncWriter.h  Buffer.h  BufferCache.cpp  BufferCache.h  ByteRateCounter.h  CameraPath.cpp  CameraPath.h  Config.h  FreeView.cpp  FreeView.h  Pipe.h  Shader.h  StatCounter.h  Timer.cpp  Timer.h  TimerGL.cpp  TimerGL.h  VertexCompressor.cpp  VertexCompressor.h  VideoCodingUtil.h  asioHelpers.h  boostHelpers.h  common.cpp  common.h  ffmpegUtil.h  glmHelpers.h  graphic.cpp  graphic.h  imguiHelper.h  ptreeHelper.cpp  ptreeHelper.h  types.h  uniforms.h
PVLI/common/compression/: Compression.cpp  Compression.h  QT.cpp  QT.h  RLE.cpp  RLE.h
PVLI/data/client/: .gitignore  bistro_interior.cfg  config.cfg  devel.cfg  lh.cfg  sponza_crytek.cfg  sponza_crytek_static.cfg
PVLI/data/client/paths/: bistro_interior.txt  lh_action.txt  lh_flyover.txt  lh_flyover2.txt  sponza_crytek.txt  sponza_crytek_action.txt
PVLI/data/client/shaders/: composite.frag  composite.vert  depthPeeling.frag  depthPeeling.vert  pixelRelocator.frag  pixelRelocator.vert  render.frag  render.vert  renderOld.frag  renderOld.vert  texPlot.frag  texPlot.vert  texPlotSubdivided.frag  texPlotSubdivided.vert  texProcess.frag
PVLI/data/client/shaders/debug/: circle.vert  cube_wireframe.frag  cube_wireframe.vert  simple.frag  simple.vert
PVLI/data/client/shaders/inpainter/: init.comp  process.comp
PVLI/data/server/: config.cfg  lv.frag  lv.vert  mark.comp  pvs.frag  pvs_mark.frag  pvs_mark.vert  readme.txt
PVLI/data/server/scenes/: readme.txt
PVLI/data/server/scenes/bistro_interior/: README.txt
PVLI/data/server/scenes/book/: scene.gltf
PVLI/data/server/scenes/pica/: scene.gltf
PVLI/data/server/scenes/sibenik/: scene.gltf
PVLI/data/server/scenes/sponza_crytek/: bottom_path.txt  middle_path.txt  scene.gltf  scene.lights  scene_static.lights  top_path.txt
PVLI/lib/px/: px_sched.h
PVLI/platform/: dxva2_opengl.h
PVLI/server/: Application.cpp  Application.h  CMakeLists.txt  CameraPrediction.cpp  CameraPrediction.h  Culling.cpp  Culling.h  CustomConversions.cu  CustomConversions.h  GLbackend.cpp  GLbackend.h  JpegEncoder.cpp  JpegEncoder.h  Lighthouse.cpp  Lighthouse.h  LinkedDepthLV.cu  LinkedDepthLV.h  NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoderUtil.cpp  NvEncoderUtil.h  PVS.cu  PVS.h  PVScache.cpp  PVScache.h  Scene.cpp  Scene.h  SceneState.cpp  SceneState.h  SceneState.inl  TimerCUDA.cpp  TimerCUDA.h  cudaHelpers.cpp  cudaHelpers.h  debug.h  dilate.cu  dilate.h  ffmpegEncoder.cpp  (+6 more)
PVLI/tests/: CMakeLists.txt  compression.cpp  quadtree.cpp
lighthouse2/: .gitignore  CMakeLists.txt  README.md
lighthouse2/cmake/: FindFFmpeg.cmake  FindFreeType2.cmake  FindShaderc.cmake  FreeImageConfig.cmake  OptiX6Config.cmake  OptiX7Config.cmake  glfw3Config.cmake
lighthouse2/lib/CUDA/: CMakeLists.txt  core_buffer.h
lighthouse2/lib/CUDA/shared_host_code/: CMakeLists.txt  cudatools.h  interoptexture.cpp  interoptexture.h
lighthouse2/lib/CUDA/shared_kernel_code/: CMakeLists.txt  finalize_shared.h  lights_shared.h  material_shared.h  tools_shared.h
lighthouse2/lib/GLFW/: Findglfw3.cmake
lighthouse2/lib/OptiX/CMake/: FindOptiX.cmake
lighthouse2/lib/RenderCore_Minimal/: CMakeLists.txt
lighthouse2/lib/RenderCore_Optix7/: CMakeLists.txt  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_Optix7Adaptive/: CMakeLists.txt  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_Optix7Filter/: CMakeLists.txt  core_mesh.cpp  core_mesh.h  core_settings.h  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_Optix7Filter/kernels/: .cuda.cu  .cuda.h  filter.h  host.h  pathtracer.h  prefixsum.h
lighthouse2/lib/RenderCore_Optix7Filter/optix/: .optix.cu
lighthouse2/lib/RenderCore_Optix7Guiding/: CMakeLists.txt  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_OptixPrime_B/: CMakeLists.txt  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_OptixPrime_BDPT/: CMakeLists.txt  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_OptixPrime_PBRT/: CMakeLists.txt
lighthouse2/lib/RenderCore_PrimeAdaptive/: CMakeLists.txt  rendercore.cpp  rendercore.h
lighthouse2/lib/RenderCore_PrimeRef/: CMakeLists.txt
lighthouse2/lib/RenderCore_SoftRasterizer/: CMakeLists.txt  core_settings.h  rendercore.cpp
lighthouse2/lib/RenderCore_Vulkan_RT/: CMakeLists.txt  vulkan_device.cpp
lighthouse2/lib/RenderSystem/: CMakeLists.txt  common_classes.h  common_functions.h  common_settings.h  common_types.h  core_api_base.cpp  core_api_base.h  host_light.cpp  host_light.h  host_material.cpp  host_mesh.cpp  host_node.cpp  host_node.h  host_scene.cpp  host_skydome.cpp  host_skydome.h  host_texture.cpp  render_api.cpp  render_api.h  rendersystem.cpp  rendersystem.h
lighthouse2/lib/RenderSystem/materials/pbrt/: spectrum.cpp  spectrum.h
lighthouse2/lib/glad/: CMakeLists.txt
lighthouse2/lib/half2.1.0/: CMakeLists.txt
lighthouse2/lib/imgui/: CMakeLists.txt
lighthouse2/lib/platform/: CMakeLists.txt  platform.cpp  platform.h  system.cpp  system.h
lighthouse2/lib/sharedBSDFs/: CMakeLists.txt  disney.h
lighthouse2/lib/taskflow/: CMakeLists.txt
lighthouse2/lib/tinygltf/: CMakeLists.txt  tiny_gltf.h
lighthouse2/lib/tinyobjloader/: CMakeLists.txt
lighthouse2/lib/tinyxml2/: CMakeLists.txt
